# ZPlayer

./: .gitignore  AppIcon.icns  AutoCloseDialog.cpp  CMakeLists.txt  Command.h  Command.mm  DatabaseConnection.cpp  DatabaseConnection.h  Makefile  README.md  build.sh  localv.cpp  my.cpp
pic/h/: bubj.h  bubj2.h  imageoff.h  imageoff1.h  imageon.h  imageon1.h  loading.cpp  loading.h  play.cpp  play.h  play1.cpp  play1.h  yybj.h  yybj2.h
